# misis2025s-3-levchenko-b-i

./: .gitignore  CMakeLists.txt  go.sh  main.cpp  readme.md
prj.lab/: CMakeLists.txt
prj.lab/lab01/: task01-01.cpp  task01-02.cpp
prj.lab/lab02/: task02.cpp
prj.lab/semcv/: CMakeLists.txt  semcv.cpp  semcv.hpp
semcv/: CMakeLists.txt  semcv.cpp  semcv.hpp
